--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# files
+EDUCATION.csv
+EXPERIENCE.csv
+SKILLS.csv
+PROJECTS.csv
+HEADING.csv
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
